# FinOps_Enviroment

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate.sh
server/: app.py
server/data/: easy.json  generate.py  hard.json  medium.json
